fixup! [MIG] web_responsive: Migrate to v10
Scroll control panel with page using CSS instead of jQuery.

jQuery scrolling caused scrollbar malfunction.

--- a/web_responsive/static/src/less/main.less
+++ b/web_responsive/static/src/less/main.less
@@ -44,3 +44,15 @@ main {
 .o_tooltip.active {
     z-index: 1051;
 }
+
+.o_web_client {
+    >.o_main {
+        overflow: auto;
+        > .o_main_content {
+            overflow: initial;
+            > .o_content {
+                overflow: initial;
+            }
+        }
+    }
+}
